	  generated by the NumLock glitch. (DLR)
	- Add ignore_seq parameter.  If a sequence is recognized but
	  ignored, we will now return ERR and set ignore_seq to TRUE, and
	  if a sequence is unrecognized, we will now return ERR and set
	  ignore_seq to FALSE.  Also, here and elsewhere, don't bother
	  assigning ERR to retval when that's its initial value. (DLR)
  get_mouseinput()
	- Don't ungetch() anything if there's no control key and no meta
	  key defined in the shortcut we clicked. (DLR)
  bottombars()
	- Don't display any more than MAIN_VISIBLE shortcuts.  Adding
	  justification of the entire file above made the search
	  shortcut list longer than this and hence made the shortcuts in
	  it so short as to be almost incomprehensible. (DLR)
	- Tweak for efficiency and to better handle shorter screen
	  widths. (David Benbennick)
	- Restructure the if block used for the sentinel key values,
	  dynamically allocate keystr based on the number of columns
	  available, and make sure we can display shortcuts even when
	  the number of available columns is too short for any complete
	  one. (DLR)
  onekey()
	- Don't bother padding the displayed shortcuts with spaces.
	  (David Benbennick)
	- Convert len to a size_t. (DLR)
  edit_add()
	- Minor cosmetic reformatting.  Also remove unused int
	  searched_later_lines. (DLR)
  blank_bottomwin()
	- Removed, as it does the same thing as blank_bottombars().
	  (David Benbennick)
  blank_titlebar()
	- New function used to blank the titlebar in topwin. (DLR)
  blank_statusbar_refresh()
	- Removed, as it's now unnecessary. (David Benbennick)
  titlebar()
	- Overhaul to use display_string() to display the filename, and
	  to better handle shorter screen widths.  Also remove
	  now-unneeded wrefresh(topwin) calls. (David Benbennick)
	  DLR: Tweak to reserve enough space for "Modified", plus
	  padding, in all cases, to make sure that the version message
	  takes up no more more than 1/3 of the available width, minus